--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "license": "MIT",
     "dependencies": {},
     "devDependencies": {
+        "autoprefixer": "^10.4.6",
         "foundation-sites": "^6.4.0",
-        "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^4.0.0",
-        "gulp-load-plugins": "^1.5.0",
-        "gulp-sass": "^3.1.0"
+        "gulp-dart-sass": "^1.1.0",
+        "gulp-postcss": "^9.0.1",
+        "gulp": "^4.0.2"
     }
 }
